create function to search by doctor name

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <h1>Doctor search PDX.</h1>
   </div>
   <div class="container">
-    <form>
+    <form id="dr-form">
       <h2>Find the perfect doctor to fit your needs in Portland</h2>
       <div class="form-group">
         <label for="health-issue">Search by your symptom:</label>
@@ -28,8 +28,8 @@
           <th>Title</th>
           <th>Picture</th>
       </thead>
-      <tbody>
-        
+      <tbody id="dr-list">
+
 
   </div>
   
