--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <thead>
           <th>Name</th>
           <th>Title</th>
-          <th>Picture</th>
+          <th>Address</th>
       </thead>
       <tbody id="dr-list">
 
