add doctor website information

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
         <th>Title</th>
         <th>Address</th>
         <th>Phone number</th>
+        <th>Website</th>
         <th>Accepts new patient</th>
       </thead>
       <tbody id="dr-list">
